[package]
name = "droptest"
license = "MPL-2.0"
readme = "README.md"
description = "A helper crate for testing drop-semantics"
documentation = "https://docs.rs/droptest"
repository = "https://github.com/regexident/droptest"
keywords = ["test", "drop"]
categories = ["development-tools::testing"]
edition = "2021"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
